more world cities

--- a/index.html
+++ b/index.html
@@ -543,7 +543,21 @@ function drawMap() {
               if (data_GHG.find(x => x.city === d.id)) {                
                 return simregionColourMap[data_GHG.find(x => x.city === d.id).region];
               }
-              else return "none";
+              else {
+                if (data_noGHG.find(x => x.city === d.id)) {
+                  console.log("find: ", data_noGHG.find(x => x.city === d.id).idName)
+                  _this = data_noGHG.find(x => x.city === d.id).idName;
+                  _thisGroup = d3.select("#vcircle" + _this).attr("class");
+                  console.log("select: ", d3.select("#vcircle" + _this).attr("class"))
+                  return simregionColourMap[_thisGroup];
+                }
+                else return "none";
+              }
+            })
+            .style("stroke", function (d) {
+              if (data_GHG.find(x => x.city === d.id) ||
+                   data_noGHG.find(x => x.city === d.id)) return "#555";
+              else return "none";  
             })
             .on("mouseover", function (d) {
               console.log("d: ", d)
