--- a/index.html
+++ b/index.html
@@ -1236,9 +1236,9 @@ function ghgBarChart() {
 
         regionalLine.append("text")
           .attr("class", "textLabels")
-          .attr("dx", 406)
+          .attr("dx", 352)
           .attr("dy", 43)
-          .text("regional average");
+          .text("avg for countries in region");
 
 } // ./fn ghgBarChart()
 
