--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
 
 <div class="row">
-  <div style="margin-left:15px;width:550px;padding-top:10px;">Similarity Map: this diagram groups cities by <a href="help.html" target="_blank">similarity</a> across multiple factors.</div>
+  <div style="margin-left:15px;width:550px;padding-top:10px;padding-bottom:5px;">Similarity Map: this diagram groups cities by <a href="help.html" target="_blank">similarity</a> across multiple factors.</div>
 </div>
 
 <div class="row">
