--- a/index.html
+++ b/index.html
@@ -221,8 +221,9 @@
 </div>
 
 <div class="row" style=>
+  <div><h4></h4></div>
    <!--colourbar-->
-  <div id="cb_label" class="col-xs-1"><h4>GHG/capita</h4></div>
+  <div id="cb_label" class="col-xs-1" style="padding-top:10px;padding-bottom:5px;"><h4>GHG/capita</h4></div>
   <div id="cb" class="col-xs-5">    
     <svg></svg>
   </div>
