--- a/index_build.html
+++ b/index_build.html
@@ -35,9 +35,7 @@
 
     <!-- new row -->
     <div class="row">
-      <div class="col-lg-6">6 colonnes</div>
-
-      <div class="col-lg-6">6 colonnes</div>
+      <div class="col-lg-12">entete</div>
     </div> <!-- ./row -->
 
     <!-- new row -->
