reads in submitted dataset

--- a/index_build.html
+++ b/index_build.html
@@ -179,7 +179,7 @@ d3.select("#barButton")
 d3.tsv("data/cityApp_attributes.tsv", function(ghg) {
   console.log("ghg read: ", ghg)
 
-  // setupData(ghg);
+  setupData(ghg);
   // drawMap();
   // ghgBarChart();
 
