--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
   var yAxis = d3.axisLeft()
     .scale(y)
     // .ticks(10, "%");
-    .ticks(10);
+    .ticks(5);
 
 
   //https://mathisonian.com/writing/easy-responsive-svgs-with-viewbox
@@ -520,7 +520,6 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
       //.attr("transform", "rotate(-90)")
       .attr("y", -33)
       .attr("dy", ".71em")
-      //.attr("transform","scale(" + 1.4 + " " + 1.4 + ")")
       .style("text-anchor", "end")      
       .text(function () { //y-axis label
         if (geogroup_name === "groupUSAAusNZ") return this_dim + " " + dimUnits[this_dim]; 
@@ -534,6 +533,59 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
                         + "translate(" + xtrans + "," + ytrans + ")";
       })
       .style("fill", "#636363");
+
+  // //scale up y-axis tick labels
+  // svgBarChart.select("g")
+  //   .attr("transform",function () {
+  //       var myscale = 1.5;
+  //       var xtrans = 0;
+  //       var ytrans = 10;
+
+  //       return "scale(" + myscale + " " + myscale + ")"  
+  //                       + "translate(" + xtrans + "," + ytrans + ")";
+  //     });
+
+  // d3.select("#barChart_Nordic").select('.barSVG')
+  //   .select('g .y.axis .tick')  //selects 0
+  //    .attr("transform", "scale(" + 5.5 + " " + 1.5 + ")" + "translate(" + 0 + "," + 143 + ")" );
+
+  // d3.select("#barChart_Nordic").select('.barSVG').select('g .y.axis .tick') //get all the nodes
+  //   .each(function(d) {
+  //     console.log("d in loop: ", d)
+  //     console.log("this: ", this)
+  //     console.log("this.attributes: ", this.attributes)
+  //     console.log("this.attributes.transform.value: ", this.attributes.transform.value)
+  //   });
+
+  //https://stackoverflow.com/questions/27405377/iterate-over-already-created-nodes-in-d3js
+  d3.select("#barChart_Nordic").select('.barSVG').selectAll('g .y.axis .tick') //get all the nodes
+    .each(function(d) {
+      //x and y scale factors
+      var xfactor = 5.5;
+      var yfactor = 1.5;
+
+      console.log("d in selectAll loop: ", d)
+      console.log("this in selectAll loop: ", this)
+      console.log("this.attributes: ", this.attributes)
+      console.log("this.attributes.transform.value: ", this.attributes.transform.value)
+
+      junk = this.attributes.transform.value.toString();
+      console.log("junk: ", junk)
+
+      ypos = parseFloat(junk.split(",")[1].split(")")[0]);
+      new_ypos = ypos/yfactor;
+
+      console.log("ypos: ", ypos)
+      console.log("new_ypos: ", new_ypos)
+
+      console.log("d3.select(this): ", d3.select(this))
+
+      d3.select(this)
+        .attr("transform", "scale(" + xfactor + " " + yfactor + ")" 
+                          + "translate(" + 0 + "," + new_ypos + ")" );
+   
+    });
+
 
   svgBarChart.append("g").selectAll(".bar")
       .data(emissions_scaled)
