WIP: barChart button to switch displayed data

--- a/index.html
+++ b/index.html
@@ -64,7 +64,14 @@
 
     <!-- row 3 -->
     <div class="row">
-      <div class="col-lg-7" id="regionLabel"><h4>GHG/capita emissions grouped by world region</h4></div>
+      <div class="col-lg-7">
+        <div id="regionLabel"style='text-align: justify'></div>
+          <ul class="nytg-sort" style='position: absolute; left: 522px; top: 0px;'>
+                <li id="barButton">Scope1/GDP</li>
+            </ul>
+   
+
+      </div>
 
       <div class="col-lg-5"id="Fig3Label" >A la Fig. 3</div>
     </div> <!-- ./row 3 -->
@@ -77,10 +84,9 @@
 
         <div class="row">
           <div class="col-lg-6">
+          
             <div id="barChart_EU">
-              <ul class="nytg-sort" style='position: absolute; left: 463px; top: 6px;'>
-                <li id="barButton">Scope1/GDP</li>
-              </ul>
+              
             </div>
           </div>
           <div class="col-lg-6">
