--- a/index.html
+++ b/index.html
@@ -128,14 +128,6 @@
 // Setup
 // ----------------------------------------------------
 
-
-// Global vars
-// -----------
-
-
-var formatDecimalS = d3.format(".2s"); //d3.format(".3n");
-var formatDecimalSci = d3.format(".2n");
-
 var container = d3.select("body").append("div")
     .style("width",width);
 
@@ -438,8 +430,8 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
   
   // Sort columns
   emissions_scaled.sort((a, b) => d3.descending(a[this_dim], b[this_dim]));
-  console.log("after sort: ", emissions_scaled)
-  console.log("val: ", emissions_scaled.map(x => x[this_dim])  )
+  // console.log("after sort: ", emissions_scaled)
+  // console.log("val: ", emissions_scaled.map(x => x[this_dim])  )
   
   var x = d3.scaleBand()
             .rangeRound([0, width], .1)
@@ -454,8 +446,12 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
   var yAxis = d3.axisLeft()
     .scale(y)
     // .ticks(10, "%");
-    .ticks(5);
-    // .tickPadding(30);
+    .ticks(5)
+    .tickFormat(function(d) { 
+      if (this_dim === 'Scope1/GDP') return formatDecimalk(d);
+      else return d;
+    })
+    .tickPadding(2);
 
 
   //https://mathisonian.com/writing/easy-responsive-svgs-with-viewbox
@@ -540,7 +536,7 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
       //.attr("transform", "rotate(-90)")
       .attr("y", -33)
       .attr("dy", ".71em")
-      .style("text-anchor", "end")      
+      .style("text-anchor", "end")
       .text(function () { 
         if (geogroup_name === "groupUSAAusNZ") return this_dim + " " + dimUnits[this_dim]; 
       })
@@ -585,11 +581,6 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
       d3.select(this)
         .attr("transform", "scale(" + xfactor + " " + yfactor + ")" 
                           + "translate(" + 0 + "," + new_ypos + ")" );
-
-
-      // after = this.attributes.transform.value.toString();
-      // console.log("this after: ", this)
-      // console.log("after transform value: ", after)  
  
     });
 
@@ -644,19 +635,21 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
       .attr("width", x.bandwidth())
       .attr("y", function (d, i) {        
        
-        if (this_dim === "Scope1/GDP") {
-          console.log("this_dim here: ", this_dim)
-          console.log('d.city: ', d.city)
-          if ( !isNaN(d[this_dim]) ) {
-            console.log('here')
-            console.log("***d[this_dim]: ", d[this_dim])
-          }
-          else {
-            console.log("isNaN")
-            console.log("&&&&&&&&d[this_dim]: ", d[this_dim])
-            return y(d[this_dim]);
-          }
-        } else return y(d[this_dim]); //Scope1/cap
+        // if (this_dim === "Scope1/GDP") {
+        //   console.log("this_dim here: ", this_dim)
+        //   console.log('d.city: ', d.city)
+        //   if ( !isNaN(d[this_dim]) ) {
+        //     console.log('here')
+        //     console.log("***d[this_dim]: ", d[this_dim])
+        //   }
+        //   else {
+        //     console.log("isNaN")
+        //     console.log("&&&&&&&&d[this_dim]: ", d[this_dim])
+        //     return y(d[this_dim]);
+        //   }
+        // } else return y(d[this_dim]); //Scope1/cap
+
+        return y(d[this_dim]);
        
       })
       .attr("height", function(d) { return height - y(d[this_dim]); })
